fabric/support/test/tests/noble_ui/error_where_clause.stderr
error: Invalid noble::error, where clause is not allowed on noble error item
  --> $DIR/error_where_clause.rs:19:20
   |
19 |     pub enum Error<T> where u32: From<u8> {}
   |                       ^^^^^
